After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658746 - Fix clock to actually update every minute
Fix clock to actually update every minute
Status: RESOLVED FIXED
Product: gnome-screensaver
Classification: Deprecated
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-screensaver maintainers
gnome-screensaver maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-11 13:40 UTC by Vincent Untz
Modified: 2011-09-12 12:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix clock to actually update every minute (1.19 KB, patch)
2011-09-11 13:40 UTC, Vincent Untz
accepted-commit_now Details | Review
Fix clock to actually update every minute (1.19 KB, patch)
2011-09-12 12:21 UTC, Matthias Clasen
committed Details | Review

Description Vincent Untz 2011-09-11 13:40:38 UTC
The move to GnomeWallClock broke things.
Comment 1 Vincent Untz 2011-09-11 13:40:40 UTC
Created attachment 196207 [details] [review]
Fix clock to actually update every minute
Comment 2 Matthias Clasen 2011-09-11 15:34:19 UTC
Review of attachment 196207 [details] [review]:

oh, bummer. please commit
Comment 3 Matthias Clasen 2011-09-12 12:21:47 UTC
The following fix has been pushed:
e2b44ec Fix clock to actually update every minute
Comment 4 Matthias Clasen 2011-09-12 12:21:49 UTC
Created attachment 196248 [details] [review]
Fix clock to actually update every minute