Fix clock to actually update every minute

https://bugzilla.gnome.org/show_bug.cgi?id=658746